fud2/tests/snapshots/tests__emit@calyx_firrtl_verilog-refmem.snap
---
source: fud2/tests/tests.rs
description: emit calyx -> verilog-refmem through firrtl
---
build-tool = fud2
rule get-rsrc
  command = $build-tool get-rsrc $out

# Calyx compiler
calyx-base = /test/calyx
calyx-exe = $calyx-base/target/debug/calyx
args = 
rule calyx
  command = $calyx-exe -l $calyx-base -b $backend $args $in > $out
rule calyx-pass
  command = $calyx-exe -l $calyx-base -p $pass $args $in > $out

# Custom Testbench Setup
rule ref-to-external
  command = sed 's/ref /@external /g' $in > $out
rule external-to-ref
  command = sed 's/@external([0-9]*)/ref/g' $in | sed 's/@external/ref/g' > $out
gen-testbench-script = $calyx-base/tools/firrtl/generate-testbench.py
build memories.sv: get-rsrc
rule generate-refmem-testbench
  command = python3 $gen-testbench-script $in > $out
rule dummy
  command = sh -c 'cat $$0' $in > $out

# Firrtl to Verilog compiler
firrtl-exe = /test/bin/firrtl
rule firrtl
  command = $firrtl-exe -i $in -o $out -X sverilog
build primitives-for-firrtl.sv: get-rsrc
rule add-verilog-primitives
  command = cat primitives-for-firrtl.sv $in > $out

# build targets
build external.futil: ref-to-external stdin
build ref.futil: external-to-ref stdin
build memory-info.json: calyx external.futil
  backend = yxi
build tb.sv: generate-refmem-testbench memory-info.json
build tmp-out.fir: calyx ref.futil
  backend = firrtl
  args = --emit-primitive-extmodules
build firrtl.fir: dummy tmp-out.fir tb.sv
build partial.sv: firrtl firrtl.fir
build _from_stdin_verilog-refmem.sv: add-verilog-primitives partial.sv | primitives-for-firrtl.sv

default _from_stdin_verilog-refmem.sv
