fud2/tests/snapshots/tests__emit@calyx_firrtl_verilog.snap
---
source: fud2/tests/tests.rs
description: emit calyx -> verilog through firrtl
---
build-tool = fud2
rule get-rsrc
  command = $build-tool get-rsrc $out

# Calyx compiler
calyx-base = /test/calyx
calyx-exe = $calyx-base/target/debug/calyx
args = 
rule calyx
  command = $calyx-exe -l $calyx-base -b $backend $args $in > $out
rule calyx-pass
  command = $calyx-exe -l $calyx-base -p $pass $args $in > $out

# Firrtl to Verilog compiler
firrtl-exe = /test/bin/firrtl
rule firrtl
  command = $firrtl-exe -i $in -o $out -X sverilog
build primitives-for-firrtl.sv: get-rsrc
rule add-firrtl-prims
  command = cat primitives-for-firrtl.sv $in > $out

# build targets
build stdin.fir: calyx stdin
  backend = firrtl
build partial.sv: firrtl stdin.fir
build stdin.sv: add-firrtl-prims partial.sv | primitives-for-firrtl.sv

default stdin.sv
