fud2/tests/snapshots/tests__emit@calyx_icarus_dat.snap
---
source: fud2/tests/tests.rs
description: emit calyx -> dat through icarus
---
build-tool = fud2
rule get-rsrc
  command = $build-tool get-rsrc $out

# Calyx compiler
calyx-base = /test/calyx
calyx-exe = $calyx-base/target/debug/calyx
args = 
rule calyx
  command = $calyx-exe -l $calyx-base -b $backend $args $in > $out
rule calyx-pass
  command = $calyx-exe -l $calyx-base -p $pass $args $in > $out

# RTL simulation
python = python3
build json-dat.py: get-rsrc
rule hex-data
  command = $python json-dat.py --from-json $in $out
rule json-data
  command = $python json-dat.py --to-json $out $in
sim_data = /test/data.json
datadir = sim_data
build $datadir: hex-data $sim_data | json-dat.py
rule sim-run
  command = ./$bin +DATA=$datadir +CYCLE_LIMIT=$cycle-limit $args > $out
cycle-limit = 500000000

# Standalone Testbench Setup
build tb.sv: get-rsrc
rule create-blank-memories
  command = touch $out

# Icarus Verilog
iverilog = iverilog
rule icarus-compile
  command = $iverilog -g2012 -o $out tb.sv memories.sv $in

# build targets
build stdin.sv: calyx stdin
  backend = verilog
  args = --disable-verify
build stdin.exe: icarus-compile stdin.sv | tb.sv
build sim.log: sim-run stdin.exe $datadir
  bin = stdin.exe
  args = +NOTRACE=1
build stdin.json: json-data $datadir sim.log | json-dat.py

default stdin.json
