fud2/tests/snapshots/tests__emit@calyx_verilog.snap
---
source: fud2/tests/tests.rs
description: emit calyx -> verilog
---
build-tool = fud2
rule get-rsrc
  command = $build-tool get-rsrc $out

# Calyx compiler
calyx-base = /test/calyx
calyx-exe = $calyx-base/target/debug/calyx
args = 
rule calyx
  command = $calyx-exe -l $calyx-base -b $backend $args $in > $out
rule calyx-pass
  command = $calyx-exe -l $calyx-base -p $pass $args $in > $out

# build targets
build _from_stdin_verilog.sv: calyx _from_stdin_calyx.futil
  backend = verilog

default _from_stdin_verilog.sv
