fud2/tests/snapshots/tests__list_ops.snap
---
source: fud2/tests/tests.rs
---
[
    (
        "area-report-to-flamegraph",
        "area-report",
        "flamegraph",
    ),
    (
        "axi-wrapped",
        "calyx",
        "calyx",
    ),
    (
        "calyx-noverify",
        "calyx",
        "verilog-noverify",
    ),
    (
        "calyx-py-profiler",
        "calyx_py",
        "flamegraph",
    ),
    (
        "calyx-to-cider",
        "calyx",
        "cider",
    ),
    (
        "calyx-to-cocotb-axi",
        "verilog-noverify",
        "cocotb-axi",
    ),
    (
        "calyx-to-firrtl",
        "calyx",
        "firrtl",
    ),
    (
        "calyx-to-synth-verilog",
        "calyx",
        "synth-verilog",
    ),
    (
        "calyx-to-verilog",
        "calyx",
        "verilog",
    ),
    (
        "calyx-to-yxi",
        "calyx",
        "yxi",
    ),
    (
        "calyx_py-to-calyx",
        "calyx_py",
        "calyx",
    ),
    (
        "cider",
        "cider",
        "dat",
    ),
    (
        "dahlia-profiler",
        "dahlia",
        "flamegraph",
    ),
    (
        "dahlia-to-calyx",
        "dahlia",
        "calyx",
    ),
    (
        "dat-to-jq",
        "dat",
        "jq",
    ),
    (
        "dat-to-jqfile",
        "dat",
        "jq",
    ),
    (
        "debug",
        "cider",
        "cider-debug",
    ),
    (
        "firrtl",
        "firrtl",
        "verilog-refmem",
    ),
    (
        "firrtl-noverify",
        "firrtl",
        "verilog-refmem-noverify",
    ),
    (
        "firrtl-with-primitives",
        "calyx",
        "firrtl-with-primitives",
    ),
    (
        "firrtl-with-primitives",
        "firrtl-with-primitives",
        "verilog-refmem",
    ),
    (
        "firrtl-with-primitives-noverify",
        "firrtl-with-primitives",
        "verilog-refmem-noverify",
    ),
    (
        "icarus",
        "verilog-noverify",
        "sim",
    ),
    (
        "icarus-refmem",
        "verilog-refmem-noverify",
        "sim",
    ),
    (
        "mrxl-to-calyx",
        "mrxl",
        "calyx",
    ),
    (
        "ntt",
        "ntt",
        "calyx",
    ),
    (
        "primitive-uses",
        "calyx",
        "primitive-uses-json",
    ),
    (
        "profiler",
        "calyx",
        "flamegraph",
    ),
    (
        "profiler-area-util",
        "calyx",
        "flamegraph",
    ),
    (
        "profiler-test",
        "calyx",
        "flamegraph-folded-for-tests",
    ),
    (
        "relay",
        "relay",
        "calyx",
    ),
    (
        "rusted-petal",
        "calyx",
        "flamegraph",
    ),
    (
        "rusted-petal-test",
        "calyx",
        "flamegraph-folded-for-tests",
    ),
    (
        "simulate",
        "sim",
        "dat",
    ),
    (
        "synth-verilog-to-area-report",
        "synth-verilog",
        "area-report",
    ),
    (
        "synth-verilog-to-hierarchy-json",
        "synth-verilog",
        "json-report",
    ),
    (
        "synth-verilog-to-timing-report",
        "synth-verilog",
        "timing-report",
    ),
    (
        "synth-verilog-to-util-json",
        "synth-verilog",
        "json-report",
    ),
    (
        "synth-verilog-to-util-report",
        "synth-verilog",
        "utilization-report",
    ),
    (
        "systolic-to-calyx",
        "systolic",
        "calyx",
    ),
    (
        "trace",
        "sim",
        "vcd",
    ),
    (
        "vcd_json",
        "vcd",
        "dat",
    ),
    (
        "verilator",
        "verilog",
        "sim",
    ),
    (
        "verilator-refmem",
        "verilog-refmem",
        "sim",
    ),
    (
        "verilog-to-xo",
        "verilog",
        "xo",
    ),
    (
        "vitis-hls",
        "cpp",
        "hls-report",
    ),
    (
        "vitis-hls-impl",
        "cpp",
        "hls-impl-report",
    ),
    (
        "xclbin",
        "xo",
        "xclbin",
    ),
    (
        "xo",
        "calyx",
        "xo",
    ),
    (
        "xrt",
        "xclbin",
        "dat",
    ),
    (
        "xrt-trace",
        "xclbin",
        "vcd",
    ),
]
