fud2/tests/snapshots/tests__list_states.snap
---
source: fud2/tests/tests.rs
---
[
    "area-report",
    "calyx",
    "calyx_py",
    "cider",
    "cider-debug",
    "cocotb-axi",
    "cpp",
    "dahlia",
    "dat",
    "firrtl",
    "firrtl-with-primitives",
    "flamegraph",
    "flamegraph-folded-for-tests",
    "hls-impl-report",
    "hls-report",
    "jq",
    "json-report",
    "mrxl",
    "ntt",
    "primitive-uses-json",
    "relay",
    "sim",
    "synth-verilog",
    "systolic",
    "timing-report",
    "utilization-report",
    "vcd",
    "verilog",
    "verilog-noverify",
    "verilog-refmem",
    "verilog-refmem-noverify",
    "xclbin",
    "xo",
    "yxi",
]
