fud2/tests/snapshots/tests__test@calyx_cider_dat.snap
---
source: fud2/tests/tests.rs
description: "emit request: calyx -> dat through cider"
---
build-tool = fud2
rule get-rsrc
  command = $build-tool get-rsrc $out

python = python3
build json-dat.py: get-rsrc
rule hex-data
  command = $python json-dat.py --from-json $in $out
rule json-data
  command = $python json-dat.py --to-json $out $in
sim_data = /test/data.json
datadir = sim_data
build $datadir: hex-data $sim_data | json-dat.py
rule sim-run
  command = ./$bin +DATA=$datadir +CYCLE_LIMIT=$cycle-limit $args > $out
cycle-limit = 500000000

calyx-base = /test/calyx
calyx-exe = $calyx-base/target/debug/calyx
args = 
rule calyx
  command = $calyx-exe -l $calyx-base -b $backend $args $in > $out
rule calyx-pass
  command = $calyx-exe -l $calyx-base -p $pass $args $in > $out
flags = -p none
rule calyx-with-flags
  command = $calyx-exe -l $calyx-base $flags $args $in > $out

cider-exe = $calyx-base/target/debug/cider
cider-converter = $calyx-base/target/debug/cider-data-converter
rule run-cider-debug
  command = $cider-exe -l $calyx-base --data data.dump $in debug || true
  pool = console
rule run-cider
  command = $cider-exe -l $calyx-base --data data.dump $in > $out
rule dump-to-interp
  command = $cider-converter --to cider $in > $out
rule interp-to-dump
  command = $cider-converter --to json $in > $out
build data.dump: dump-to-interp $sim_data | $cider-converter

build cider-input.futil: calyx-with-flags _from_stdin_calyx.futil
build interp_out.dump: run-cider cider-input.futil | data.dump
build _to_stdout_dat.json: interp-to-dump interp_out.dump | $sim_data $cider-converter

default _to_stdout_dat.json
